@@ -9,6 +9,8 @@
 - add option -k to keep installed files perm
 - fix a buggy test for non-installed packages (Han Holl)
 - add option -f to have an external filter (Han Holl)
+- add /usr/local/bin to the PATH and remove dirname
+- use rpmbuild  if it exists (rpm 4.1)  (Han Holl)
 
 * Mon Oct  7 2002  <valery_reznic@users.sourceforge.net> 0.7.1
 - split the script for a more modular way
